# openfilter-mcp

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Dockerfile.gpu  Dockerfile.prebuilt  Dockerfile.slim  Makefile  README.md  RELEASE.md  cloudbuild-gpu.yaml  cloudbuild-test.yaml  cloudbuild.yaml  opencode.json  pyproject.toml
.claude/: mcp.json
.cursor/: mcp.json
.github/environments/: development.yaml  production.yaml  staging.yaml
.github/workflows/: apply-environments.yaml  auto-tag.yml  check-release-log.yaml  ci.yaml  deployments.yaml  external-review-freshness.yaml  publish-chart.yaml  release-tag-bump-gitops.yaml  test.yml
.opencode/: task-instructions.md
code-context/: README.md  pyproject.toml
code-context/.github/workflows/: test.yml
code-context/src/code_context/: __init__.py  chunking.py  embedding.py  indexing.py  main.py  utils.py
code-context/tests/: test_chunking.py  test_embedding.py  test_utils.py
demos/token-elicitation/: README.md  demo-prompts.md
deployment/openfilter-mcp/: .helmignore  Chart.yaml  README.md  values.yaml
deployment/openfilter-mcp/overrides/: development.yaml  production.yaml  staging.yaml
deployment/openfilter-mcp/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  pdb.yaml  service.yaml  serviceaccount.yaml
docs/: configuration.md  development.md  tools.md
docs/demo/: AGENTS.md
scripts/: docker-build.sh  lookup_latest_version.py  smoke_entity_spec.py
src/code_context/: indexing.py  utils.py
src/openfilter_mcp/: __init__.py  approval_server.py  auth.py  entity_tools.py  golden_truth.py  preindex_repos.py  redact.py  scopes.py  server.py  synthetic_video.py  test_pipeline.py
tests/: __init__.py  conftest.py  test_approval_e2e.py  test_auth.py  test_chunking.py  test_embedding.py  test_entity_tools.py  test_golden_truth.py  test_openapi_integration.py  test_redact.py  test_scopes.py  test_security_invariant.py  test_synthetic_video.py  test_test_pipeline.py  test_upload_video.py  test_utils.py
