[project]
name = "openfilter-mcp"
version = "0.1.0"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastmcp>=2.13.1",
    "gitpython>=3.1.45",
    "httpx>=0.28.1",
    "inflect>=7.5.0",
    "jq>=1.10.0",
    "jsonschema>=4.20.0",
    "platformdirs>=4.0.0",
    "tantivy>=0.22.0",
]

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
index = "openfilter_mcp.preindex_repos:preindex_openfilter_repos"
serve = "openfilter_mcp.server:main"

[tool.uv.sources]
code-context = { path = "./code-context" }

[dependency-groups]
code-search = ["code-context[ml]>=0.1.0"]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-httpx>=0.35.0",
]
